# ffiec-data-connect

./: .coverage.ecocline.local.4636.XmkyAYVx  .coverage.ecocline.local.4637.XDeQTZRx  .coverage.ecocline.local.4639.XcGjHqDx  .coverage.ecocline.local.4645.XKdkNchx  .coveragerc  .doc8  .flake8  .gitignore  .readthedocs.yaml  .readthedocs.yml  ASYNC_PRACTICAL_IMPLEMENTATION.md  CHANGELOG.md  COMMERCIAL.md  FFIEC_REST_IMPLEMENTATION_FIXES.md  LICENSE.txt  MANIFEST.in  MIGRATION.md  MIGRATION_GUIDE_v2.0.0rc1.md  MIGRATION_GUIDE_v2.0.0rc3.md  Makefile  PYPI_TRUSTED_PUBLISHER_SETUP.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.0.0rc1.md  RELEASE_v2.0.0rc4.md  REST_API_MAPPING.md  Readme.rst  SOAP-to-REST.md  TESTS.md  bandit-report.json  collect_rest_response_data.py  coverage-custom.css  example.ipynb  ffiec_data_connect_demo.ipynb  ffiec_data_connect_rest_demo.ipynb  ffiec_data_connect_soap_demo.ipynb  ffiec_rest_api_openapi.yaml  implementation-plan.md  llms.txt  pyproject.toml  (+19 more)
.github/: FUNDING.yml
.github/workflows/: codeql.yml  comprehensive-testing.yml  dependency-review.yml  docs.yml  publish-pypi.yml  test.yml  verify-pypi-install.yml
dev/: ASYNC_PRACTICAL_IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md  LOCAL_CI_TESTING.md  MEMORY_LEAK_ANALYSIS.md  RACE_CONDITION_ANALYSIS.md  SECURITY_REVIEW.md  UNIT_TESTING_RECOMMENDATIONS.md  requirements-test.txt
dev/scripts/: capture_real_responses.py  monitor_build_size.py  run_coverage.py  test_local_ci.sh  validate_wheel_dependencies.py
docs/: data-type-handling.md  ffiec_rest_api_openapi.yaml  requirements.txt
docs/source/: account_setup.rst  conf.old.py  conf.py  data_type_handling.rst  development_setup.rst  examples.rst  ffiec_data_connect.rst  index.rst  licensedisclaimer.rst  modules.rst  rest_api_reference.rst  testing.rst  troubleshooting.rst  versionhistory.rst
docs/source/_build/doctrees/: account_setup.doctree  environment.pickle  examples.doctree  ffiec_data_connect.doctree  index.doctree  licensedisclaimer.doctree  modules.doctree  versionhistory.doctree
examples/: 01_quickstart.ipynb  02_bulk_download_call_reports.ipynb  03_peer_group_analysis.ipynb  04_incremental_updates.ipynb  README.md  _build_notebooks.py  example-1.ipynb
refs/: README.md
scripts/: capture_real_responses.py
src/ffiec_data_connect/: .gitignore  __init__.py  async_compatible.py  config.py  constants.py  credentials.py  data_normalizer.py  datahelpers.py  exceptions.py  ffiec_connection.py  methods.py  methods_enhanced.py  protocol_adapter.py  soap_cache.py  utils.py  xbrl_processor.py
src/ffiec_data_connect.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ffiec_data_connect/models/: __init__.py  api_models.py
tests/: conftest.py  connect_test.py  datetransformation_test.py
tests/fixtures/soap_responses/: retrieve_data_response.xml  retrieve_reporting_periods_response.xml
tests/fixtures/wsdl_samples/: ffiec_real_retrieval_service.wsdl  ffiec_webservice.wsdl
tests/fixtures/xbrl_samples/: call_report_sample.xml  ubpr_sample.xml
tests/integration/: test_mock_soap_server.py  test_real_responses.py  test_rest_api_live.py
tests/mocks/: soap_server.py  vcr_integration.py
tests/unit/: test_async_compatible.py  test_async_integration.py  test_basic_functionality.py  test_calling_conventions.py  test_credentials.py  test_data_normalizer.py  test_data_normalizer.py.disabled  test_datahelpers.py  test_documentation_build.py  test_dual_field_compatibility.py  test_exceptions_detailed.py  test_ffiec_connection.py  test_force_null_types.py  test_force_null_types.py.disabled  test_legacy_compatibility.py  test_memory_leaks.py  test_methods.py  test_methods_enhanced.py  test_numpy_dtypes.py  test_oauth2_credentials.py  test_polars_direct_conversion.py  test_protocol_adapter.py  test_protocol_adapter.py.disabled  test_protocol_adapter_v3.py  test_rc6_arg_interactions.py  test_reporting_periods_sorting.py  test_soap_cache.py  test_thread_safety.py  test_utils.py  test_xbrl_processor.py  test_xml_processing_optimizations.py
