[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ffiec-data-connect"
version = "3.0.0rc4"
authors = [
    {name = "Civic Forge Solutions LLC", email = "michael@civicforge.solutions"},
]
description = "Secure, thread-safe Python wrapper for FFIEC REST API with async support"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Typing :: Typed",
]
license = "MPL-2.0"
keywords = [
    "ffiec", 
    "banking", 
    "financial", 
    "regulatory", 
    "call-report", 
    "ubpr", 
    "fdic", 
    "async", 
    "pandas", 
    "polars"
]
dependencies = [
    # Pin upper bounds to next major to reduce unexpected breaking changes.
    # Adjust after compatibility verification with newer majors.
    "httpx>=0.24.0,<2.0.0",    # For REST API
    "pandas>=3.0.0,<4.0.0",  # v3.0.0+ is the baseline; tested against 3.0.2
    "numpy>=1.20.0,<3.0.0",  # Allow NumPy 2.x; revisit before 3.x
    "lxml>=4.6.0,<7.0.0",    # Used by xbrl_processor for REST XBRL parsing
    "xmltodict>=0.12.0,<2.0.0",  # 1.x now stable
    "defusedxml>=0.7.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",  # For API models and validation
]

[project.optional-dependencies]
polars = [
    "polars>=0.19.0,<2.0.0",
    "pyarrow>=10.0.0,<24.0.0",  # Broad upper cap; tested against 23.x
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-timeout>=2.1.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "psutil>=5.8.0",
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "coverage>=7.0.0",
    "build>=0.8.0",
    "twine>=4.0.0",
]
docs = [
    # Narrative docs moved to https://call.report/library. This build now
    # renders only a redirect landing page; autodoc, openapi, myst, RST
    # linting, and doc-build pytest dependencies are no longer needed.
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]
notebook = [
    "jupyter>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
]
all = [
    "ffiec-data-connect[polars,dev,docs,notebook]"
]

[project.urls]
"Homepage" = "https://call.report/library/ffiec-data-connect"
"Documentation" = "https://call.report/library/ffiec-data-connect"
"Repository" = "https://github.com/call-report/ffiec-data-connect"
"Bug Tracker" = "https://github.com/call-report/ffiec-data-connect/issues"
"Changelog" = "https://call.report/library/ffiec-data-connect/release-history"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ffiec_data_connect = ["py.typed"]

# Test configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/ffiec_data_connect"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/.*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2

# Black code formatting
[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | dev
  | htmlcov
)/
'''

# isort import sorting
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["src", "tests"]

# MyPy type checking
[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false
strict_equality = false
show_error_codes = true
ignore_missing_imports = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "lxml.*",
    "polars.*",
]
ignore_missing_imports = true

[tool.uv.workspace]
members = [
    "call.report",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
